<resources>
    <string name="app_name">My Application</string>
    <string name="txtView_Log_title">Weather Food Locate</string>
    <string name="txt_log_email">Enter Email</string>
    <string name="txt_log_pass">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="txtView_register">Register</string>
    <string name="txtView_Forgottenpassword">Forgotten Password</string>
    <string name="txtview_Reg_title">User Registration</string>
    <string name="txt_Usr_email">Enter Email</string>
    <string name="txt_password">Enter Password</string>
    <string name="retxt_password">ReEnter Password</string>
    <string name="txt_userfirstname">Firstname</string>
    <string name="txt_userlastname">Lastname</string>
    <string name="button_createaccount">Create Account</string>
    <string name="textview_login">Login</string>
    <string name="txtview_reg_title">User Registration</string>
    <string name="txt_usr_email">Enter Email</string>
    <string name="btn_reg">Register</string>
    <string name="txtview_Login">Login</string>
    <string name="txtview_password_reset">Password Reset</string>
    <string name="txt_user_email">Enter Email</string>
    <string name="btn_send_email">Send Email</string>
    <string name="txtview_weainfo">Weather Informtaion</string>
    <string name="txtView_Full_Name">Enter Full Name</string>
    <string name="text_reenter_password">ReEnter Password</string>
    <string name="txtview_showpass">Show Password</string>
    <string name="txt_food_hygiene">Food Hygiene</string>
    <string name="txt_logout">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_foodhy">Food Hygiene Information</string>
    <string name="but_search">Search</string>
    <string name="txt_foodhy_2">Food Hygiene</string>
</resources>
