<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView_Reg_title"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="36dp"
        android:text="@string/txtview_Reg_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txtview_reg_title" />

    <EditText
        android:id="@+id/editText_UserEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_Usr_email" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_password" />

    <Button
        android:id="@+id/button_Reg"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:onClick="registerUser"
        android:text="@string/btn_reg" />

    <TextView
        android:id="@+id/textView_Logme"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:onClick="goLogin"
        android:text="@string/txtview_Login" />

    <ProgressBar
        android:id="@+id/progressBar_UsrReg"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="80dp"
        android:layout_height="wrap_content" />

</LinearLayout>