<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgottenPasswordActivity">

    <TextView
        android:id="@+id/textView_password_reset"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtview_password_reset" />

    <EditText
        android:id="@+id/editText_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_user_email" />

    <Button
        android:id="@+id/button_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/btn_send_email" />
</LinearLayout>